# tennis-club

./: .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
my_tennis_club/members/: admin.py  apps.py  models.py  urls.py  views.py
my_tennis_club/members/migrations/: 0001_initial.py
my_tennis_club/members/templates/: master.html
my_tennis_club/my_tennis_club/: settings.py  urls.py
